@@ -29,12 +29,14 @@ btowc
 c-ctype
 closeout
 dfa
+eloop-threshold
 extensions
 fwriting
 getdelim
 gettext-h
 git-version-gen
 gitlog-to-changelog
+idx
 ignore-value
 localcharset
 manywarnings
@@ -43,10 +45,12 @@ mbrtowc
 mbsinit
 memchr
 memrchr
+minmax
 mkostemp
 obstack
 perl
 progname
+readlink
 readme-release
 regex
 rename
